# beacon-server/db/sqlc/models.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.31.1
+//   sqlc v1.30.0
 
 package db
 
@@ -168,6 +168,8 @@ type NodeNeighbor struct {
 	ObservationCount int64              `json:"observation_count"`
 	Snr              *float32           `json:"snr"`
 	RegionScope      *string            `json:"region_scope"`
+	SnrSampleCount   int64              `json:"snr_sample_count"`
+	SnrLastSeen      pgtype.Timestamptz `json:"snr_last_seen"`
 }
 
 type NodeShortID struct {
