# beacon-server/docs/swagger.json
@@ -209,7 +209,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/github_com_MeshCore-Beacon_beacon-server_internal_api.Page-github_com_MeshCore-Beacon_beacon-server_internal_api_ChannelMessage"
                         }
                     },
                     "400": {
@@ -395,7 +395,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/github_com_MeshCore-Beacon_beacon-server_internal_api.Page-github_com_MeshCore-Beacon_beacon-server_internal_api_ChannelMessage"
                         }
                     },
                     "400": {
@@ -2728,6 +2728,13 @@
                         "type": "string"
                     }
                 },
+                "neighborLinks": {
+                    "description": "bulk link quality for the same optional map topology",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_MeshCore-Beacon_beacon-server_internal_api.NodeLinkMetric"
+                    }
+                },
                 "neighbors": {
                     "type": "array",
                     "items": {
@@ -2779,6 +2786,23 @@
                 }
             }
         },
+        "github_com_MeshCore-Beacon_beacon-server_internal_api.NodeLinkMetric": {
+            "type": "object",
+            "properties": {
+                "nodeId": {
+                    "type": "string"
+                },
+                "snr": {
+                    "type": "number"
+                },
+                "snrLastSeen": {
+                    "type": "integer"
+                },
+                "snrSampleCount": {
+                    "type": "integer"
+                }
+            }
+        },
         "github_com_MeshCore-Beacon_beacon-server_internal_api.NodeNeighbor": {
             "type": "object",
             "properties": {
@@ -2819,6 +2843,13 @@
                 },
                 "snr": {
                     "type": "number"
+                },
+                "snrLastSeen": {
+                    "description": "epoch ms of most recent reliable SNR sample",
+                    "type": "integer"
+                },
+                "snrSampleCount": {
+                    "type": "integer"
                 }
             }
         },
@@ -2862,6 +2893,13 @@
                     "type": "array",
                     "items": {
                         "type": "string"
+                    }
+                },
+                "neighborLinks": {
+                    "description": "bulk link quality for the same optional map topology",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_MeshCore-Beacon_beacon-server_internal_api.NodeLinkMetric"
                     }
                 },
                 "nodeType": {
@@ -3452,6 +3490,26 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/github_com_MeshCore-Beacon_beacon-server_internal_api.AdvertObservation"
+                    }
+                },
+                "nextCursor": {
+                    "type": "integer"
+                },
+                "nextPageToken": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_MeshCore-Beacon_beacon-server_internal_api.Page-github_com_MeshCore-Beacon_beacon-server_internal_api_ChannelMessage": {
+            "type": "object",
+            "properties": {
+                "hasMore": {
+                    "type": "boolean"
+                },
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_MeshCore-Beacon_beacon-server_internal_api.ChannelMessage"
                     }
                 },
                 "nextCursor": {
